// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders correctly 1`] = `
<div
  class="zs-progress zs-progress--line zs-progress--primary zs-progress--md"
>
  <div
    class="zs-progress__outer"
  >
    <div
      class="zs-progress__track"
      style="height:8;border-radius:8px"
    >
      <div
        class="zs-progress__thumb"
        style="width:10%;height:8px;border-radius:8px"
      />
    </div>
    <div
      class="zs-progress__text"
    >
      10%
    </div>
  </div>
</div>
`;

exports[`Progress renders has children correctly 1`] = `
<div
  class="zs-progress zs-progress--line zs-progress--primary zs-progress--md"
>
  <div
    class="zs-progress__outer"
  >
    <div
      class="zs-progress__track"
      style="height:8;border-radius:8px"
    >
      <div
        class="zs-progress__thumb"
        style="width:10%;height:8px;border-radius:8px"
      />
    </div>
    <div
      class="zs-progress__text"
    >
      foo
    </div>
  </div>
</div>
`;

exports[`Progress renders percent correctly 1`] = `
<Progress
  percent={50}
  prefixCls="zs-progress"
  shape="circle"
  size="md"
  strokeShape="round"
  text={[Function]}
  theme="primary"
>
  <div
    className="zs-progress zs-progress--circle zs-progress--primary zs-progress--md"
    style={Object {}}
  >
    <svg
      viewBox="0 0 Infinity Infinity"
    >
      <path
        className="zs-progress__track"
        d="
        MInfinity, Infinity
        m0 -16
        a16 16 0 1 1 0 32
        a16 16 0 1 1 0 -32"
        strokeLinecap="round"
        strokeWidth={Infinity}
      />
      <path
        className="zs-progress__thumb"
        d="
        MInfinity, Infinity
        m0 -16
        a16 16 0 1 1 0 32
        a16 16 0 1 1 0 -32"
        strokeDasharray={100.53096491487338}
        strokeDashoffset={50.26548245743669}
        strokeLinecap="round"
        strokeWidth={Infinity}
      />
    </svg>
    <div
      className="zs-progress__text"
    >
      foo
    </div>
  </div>
</Progress>
`;

exports[`Progress renders shape is circle correctly 1`] = `
<div
  class="zs-progress zs-progress--circle zs-progress--primary zs-progress--md"
>
  <svg
    viewBox="0 0 40 40"
  >
    <path
      class="zs-progress__track"
      d="
        M20, 20
        m0 -16
        a16 16 0 1 1 0 32
        a16 16 0 1 1 0 -32"
      stroke-linecap="butt"
      stroke-width="8"
    />
    <path
      class="zs-progress__thumb"
      d="
        M20, 20
        m0 -16
        a16 16 0 1 1 0 32
        a16 16 0 1 1 0 -32"
      stroke-dasharray="100.53096491487338"
      stroke-dashoffset="90.47786842338604"
      stroke-linecap="butt"
      stroke-width="8"
    />
  </svg>
  <div
    class="zs-progress__text"
  >
    foo
  </div>
</div>
`;

exports[`Progress renders shape is semi-circle correctly 1`] = `
<div
  class="zs-progress zs-progress--semi-circle zs-progress--primary zs-progress--md"
>
  <svg
    viewBox="0 0 40 20"
  >
    <path
      class="zs-progress__track"
      d="
        M20, 20
        m-16 0
        a16 16 0 0 1 32 0"
      stroke-linecap="round"
      stroke-width="8"
    />
    <path
      class="zs-progress__thumb"
      d="
        M20, 20
        m-16 0
        a16 16 0 0 1 32 0"
      stroke-dasharray="50.26548245743669"
      stroke-dashoffset="45.23893421169302"
      stroke-linecap="round"
      stroke-width="8"
    />
  </svg>
  <div
    class="zs-progress__text"
  >
    foo
  </div>
</div>
`;

exports[`Progress renders size is lg correctly 1`] = `
<Progress
  percent={10}
  prefixCls="zs-progress"
  shape="line"
  size="lg"
  strokeShape="round"
  text={[Function]}
  theme="primary"
>
  <div
    className="zs-progress zs-progress--line zs-progress--primary zs-progress--lg"
    style={Object {}}
  >
    <div
      className="zs-progress__outer"
    >
      <div
        className="zs-progress__track"
        style={
          Object {
            "borderRadius": "10px",
            "height": "10",
          }
        }
      >
        <div
          className="zs-progress__thumb"
          style={
            Object {
              "borderRadius": "10px",
              "height": "10px",
              "width": "10%",
            }
          }
        />
      </div>
      <div
        className="zs-progress__text"
      >
        10%
      </div>
    </div>
  </div>
</Progress>
`;

exports[`Progress renders size is md correctly 1`] = `
<Progress
  percent={10}
  prefixCls="zs-progress"
  shape="line"
  size="md"
  strokeShape="round"
  text={[Function]}
  theme="primary"
>
  <div
    className="zs-progress zs-progress--line zs-progress--primary zs-progress--md"
    style={Object {}}
  >
    <div
      className="zs-progress__outer"
    >
      <div
        className="zs-progress__track"
        style={
          Object {
            "borderRadius": "8px",
            "height": "8",
          }
        }
      >
        <div
          className="zs-progress__thumb"
          style={
            Object {
              "borderRadius": "8px",
              "height": "8px",
              "width": "10%",
            }
          }
        />
      </div>
      <div
        className="zs-progress__text"
      >
        10%
      </div>
    </div>
  </div>
</Progress>
`;

exports[`Progress renders size is sm correctly 1`] = `
<Progress
  percent={10}
  prefixCls="zs-progress"
  shape="line"
  size="sm"
  strokeShape="round"
  text={[Function]}
  theme="primary"
>
  <div
    className="zs-progress zs-progress--line zs-progress--primary zs-progress--sm"
    style={Object {}}
  >
    <div
      className="zs-progress__outer"
    >
      <div
        className="zs-progress__track"
        style={
          Object {
            "borderRadius": "4px",
            "height": "4",
          }
        }
      >
        <div
          className="zs-progress__thumb"
          style={
            Object {
              "borderRadius": "4px",
              "height": "4px",
              "width": "10%",
            }
          }
        />
      </div>
      <div
        className="zs-progress__text"
      >
        10%
      </div>
    </div>
  </div>
</Progress>
`;
